Align footer content

--- a/index.html
+++ b/index.html
@@ -284,6 +284,7 @@
         <div class="col-6 col-md-2 image-container" id="insta6"></div>
     </div>
   </div>
+   <!-- Footer-->
     <footer>
       <div class="container-fluid" id="footer-links-container">
           <div class="row">
