--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                   <a href="http://www.chavesgold.com.br/2021/catalogo%20chaves%202020.pdf" class="nav-link" target="_blank">Catálogo</a>
               </li>
               <li class="nav-items">
-                  <a href="#" class="nav-link">Contato</a>
+                  <a href="html/contact/index.html" class="nav-link">Contato</a>
               </li>
           </ul>
       </div>    
   </nav>
-  <!-- FIm Navbar-->
+  <!-- Fim Navbar-->
 
     <main class="container col-12 justify-content-center">
 
