--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                   <a href="#" class="nav-link">Clientes</a>
               </li>
               <li class="nav-items">
-                  <a href="html/Catalogo/index.html" class="nav-link" target="_blank">Catálogo</a>
+                  <a href="html/Catalogo/index.htmlt" class="nav-link">Catálogo</a>
               </li>
               <li class="nav-items">
                   <a href="html/contact/index.html" class="nav-link">Contato</a>
