--- a/html/Catalogo/index.html
+++ b/html/Catalogo/index.html
@@ -42,22 +42,22 @@
             </button>
             <ul class="navbar-nav mb-2 mb-lg-0 collapse navbar-collapse" id="bottom-navbar">
                 <li class="nav-items">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="../../index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-items">
                     <a href="#" class="nav-link">Serviços</a>
                 </li>
                 <li class="nav-items">
-                  <a href="html/loja/index.html" class="nav-link">Loja</a>
+                  <a href="../loja/index.html" class="nav-link">Loja</a>
               </li>
                 <li class="nav-items">
                     <a href="#" class="nav-link">Clientes</a>
                 </li>
                 <li class="nav-items">
-                    <a href="http://www.chavesgold.com.br/2021/catalogo%20chaves%202020.pdf" class="nav-link" target="_blank">Catálogo</a>
+                    <a href="#" class="nav-link" >Catálogo</a>
                 </li>
                 <li class="nav-items">
-                    <a href="html/contact/index.html" class="nav-link">Contato</a>
+                    <a href="../contact/index.html" class="nav-link">Contato</a>
                 </li>
             </ul>
         </div>    
