Update assets in PDF's

--- a/html/Catalogo/index.html
+++ b/html/Catalogo/index.html
@@ -66,7 +66,7 @@
     <main>
          <!-- Catálogos -->
     <div class="container" id="new-products">
-        <h2 class="title primary-color">Catálogos</h2>
+        <h2 class="title primary-color">Catálogos digitais</h2>
         <div class="row">
             <div class="col-12 col-md-3 d-none d-md-flex" id="new-products-banner">
                 <p class="secondary-color">Catálogo</p>
@@ -81,7 +81,7 @@
                             <div class="card-body">
                                  <p class="card-category secondary-color">Catálogo 2020</p>
                                  <h5 class="card-title">Gold</h5>
-                                 <a href="http://www.chavesgold.com.br/2021/catalogo%20chaves%202020.pdf" target="_blank" class="btn btn-primary">Acessar</a>
+                                 <a href="../../assets/PDF/catalogo chaves 2020.pdf" target="_blank" class="btn btn-primary">Acessar</a>
                             </div>
                         </div>
                     </div>
@@ -91,15 +91,15 @@
                             <div class="card-body">
                                  <p class="card-category secondary-color">Catálogo 2019</p>
                                  <h5 class="card-title">Dovale</h5>
-                                 <a href="Catálogo 2019 completo.pdf" target="_blank" class="btn btn-primary">Acessar</a>
+                                 <a href="../../assets/PDF/Catálogo 2019 completo.pdf" target="_blank" class="btn btn-primary">Acessar</a>
                             </div>
                         </div>
                     </div>
                     <div class="col-12 col-md-4">
                         <div class="card primary-bg-color">
-                            <img src="https://www.jas.com.br/Vitrine/images/logo.png" alt="Relogio 6" class="card-img-top img-fluid">
+                            <img src="https://static.fabapp.com/868d5f7bb5652e410444dcb4ed1ef49428b1c4c1" alt="Relogio 6" class="card-img-top img-fluid">
                             <div class="card-body">
-                                 <p class="card-category secondary-color">Catálogos</p>
+                                 <p class="card-category secondary-color">Catálogos digitais</p>
                                  <h5 class="card-title">Jas</h5>
                                  <a href="https://www.jas.com.br/catalogo/chaves/web/" target="_blank" class="btn btn-primary">Acessar</a>
                             </div>
