--- a/html/contact/index.html
+++ b/html/contact/index.html
@@ -12,7 +12,7 @@
         <script src="../../js/main.js"></script>
         <link rel="shortcut icon" href="../../assets/img/logo.png" type="image/x-icon">
         <link rel="stylesheet" href="../../assets/css/main.css">
-        <link rel="stylesheet" href="../../https://cdn.es.gov.br/fonts/font-awesome/css/font-awesome.min.css">
+        <link rel="stylesheet" href="https://cdn.es.gov.br/fonts/font-awesome/css/font-awesome.min.css">
         <title>Chaveiro João Bosco</title>
     </head>
     <body>
@@ -42,22 +42,22 @@
             </button>
             <ul class="navbar-nav mb-2 mb-lg-0 collapse navbar-collapse" id="bottom-navbar">
                 <li class="nav-items">
-                    <a href="index.html" class="nav-link">Home</a>
+                    <a href="../../index.html" class="nav-link">Home</a>
                 </li>
                 <li class="nav-items">
                     <a href="#" class="nav-link">Serviços</a>
                 </li>
                 <li class="nav-items">
-                  <a href="html/loja/index.html" class="nav-link">Loja</a>
+                  <a href="../loja/index.html" class="nav-link">Loja</a>
               </li>
                 <li class="nav-items">
-                    <a href="#" class="nav-link">Clientes</a>
+                    <a href="../Clients/index.html" class="nav-link">Clientes</a>
                 </li>
                 <li class="nav-items">
-                    <a href="http://www.chavesgold.com.br/2021/catalogo%20chaves%202020.pdf" class="nav-link" target="_blank">Catálogo</a>
+                    <a href="../Catalogo/index.html" class="nav-link">Catálogo</a>
                 </li>
                 <li class="nav-items">
-                    <a href="html/contact/index.html" class="nav-link">Contato</a>
+                    <a href="#" class="nav-link">Contato</a>
                 </li>
             </ul>
         </div>    
@@ -68,5 +68,22 @@
             
         </main>
         <!-- Footer-->
+        <footer>
+            <div class="container-fluid">
+                <div class="col-12" id="social-container">
+                    <a href="https://www.facebook.com/CHAVEIROJBALVES/"><i class="bi bi-facebook"></i></a>
+                    <a href="https://www.instagram.com/chaveirojoaobosco24h/" target="_blank"><i class="bi bi-instagram"></i></a>
+                    <a href="https://wa.me/5521999426736?text=Gostaria%20de%20solicitar%20um%20orçamento"><i class="bi bi-whatsapp"></i></a>
+                </div>
+            </div>
+            <div class="container" id="copy-container">
+                <p>Todos os direitos &copy;reservados 2022 <span class="primary-color">Chaveiro João Bosco</span> - O seu chaveiro de confiança</p>
+            </div>
+              <div class="botao-flutuante">
+                <a href="https://wa.me/5521999426736?text=Gostaria%20de%20solicitar%20um%20orçamento" style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:40px;box-shadow: 1px 1px 2px #888;z-index:1000;" target="_blank">
+                <span style="margin-top:1px" class="fa fa-whatsapp" aria-hidden="true"></span>
+                </a>
+                </div>
+        </footer>
     </body>
 </html>
