--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 <a href="html/loja/index.html" class="nav-link">Loja</a>
             </li>
               <li class="nav-items">
-                  <a href="#" class="nav-link">Clientes</a>
+                  <a href="html/Clients/index.html" class="nav-link">Clientes</a>
               </li>
               <li class="nav-items">
                   <a href="html/Catalogo/index.html" class="nav-link">Catálogo</a>
@@ -321,7 +321,21 @@
           </div>
       </div>
       <div class="container" id="copy-container">
-          <p>Todos os direitos reservados @2022 <span class="primary-color">Chaveiro João Bosco</span> - O seu chaveiro de confiança</p>
+          <p>Todos os direitos reservados <div class="container-fluid">
+            <div class="col-12" id="social-container">
+                <a href="https://www.facebook.com/CHAVEIROJBALVES/"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.instagram.com/chaveirojoaobosco24h/" target="_blank"><i class="bi bi-instagram"></i></a>
+                <a href="https://wa.me/5521999426736?text=Gostaria%20de%20solicitar%20um%20orçamento"><i class="bi bi-whatsapp"></i></a>
+            </div>
+        </div>
+        <div class="container" id="copy-container">
+            <p>Todos os direitos &copy;reservados 2022 <span class="primary-color">Chaveiro João Bosco</span> - O seu chaveiro de confiança</p>
+        </div>
+          <div class="botao-flutuante">
+            <a href="https://wa.me/5521999426736?text=Gostaria%20de%20solicitar%20um%20orçamento" style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:40px;box-shadow: 1px 1px 2px #888;z-index:1000;" target="_blank">
+            <span style="margin-top:1px" class="fa fa-whatsapp" aria-hidden="true"></span>
+            </a>
+            </div>2022 <span class="primary-color">Chaveiro João Bosco</span> - O seu chaveiro de confiança</p>
       </div>
         <div class="botao-flutuante">
           <a href="https://wa.me/5521999426736?text=Gostaria%20de%20solicitar%20um%20orçamento" style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:40px;box-shadow: 1px 1px 2px #888;z-index:1000;" target="_blank">
