--- a/html/Catalogo/index.html
+++ b/html/Catalogo/index.html
@@ -108,5 +108,22 @@
                 </div>
             </div>
     </main>
+    <footer>
+        <div class="container-fluid">
+            <div class="col-12" id="social-container">
+                <a href="https://www.facebook.com/CHAVEIROJBALVES/"><i class="bi bi-facebook"></i></a>
+                <a href="https://www.instagram.com/chaveirojoaobosco24h/" target="_blank"><i class="bi bi-instagram"></i></a>
+                <a href="https://wa.me/5521999426736?text=Gostaria%20de%20solicitar%20um%20orçamento"><i class="bi bi-whatsapp"></i></a>
+            </div>
+        </div>
+        <div class="container" id="copy-container">
+            <p>Todos os direitos &copy;reservados 2022 <span class="primary-color">Chaveiro João Bosco</span> - O seu chaveiro de confiança</p>
+        </div>
+          <div class="botao-flutuante">
+            <a href="https://wa.me/5521999426736?text=Gostaria%20de%20solicitar%20um%20orçamento" style="position:fixed;width:60px;height:60px;bottom:40px;right:40px;background-color:#25d366;color:#FFF;border-radius:50px;text-align:center;font-size:40px;box-shadow: 1px 1px 2px #888;z-index:1000;" target="_blank">
+            <span style="margin-top:1px" class="fa fa-whatsapp" aria-hidden="true"></span>
+            </a>
+            </div>
+    </footer>
 </body>
 </html>
