--- a/html/Catalogo/index.html
+++ b/html/Catalogo/index.html
@@ -51,7 +51,7 @@
                   <a href="../loja/index.html" class="nav-link">Loja</a>
               </li>
                 <li class="nav-items">
-                    <a href="#" class="nav-link">Clientes</a>
+                    <a href="../Clients/index.html" class="nav-link">Clientes</a>
                 </li>
                 <li class="nav-items">
                     <a href="#" class="nav-link" >Catálogo</a>
