--- a/html/contact/msgsend.html
+++ b/html/contact/msgsend.html
@@ -64,53 +64,21 @@
         </div>    
     </nav>
         </header>
-        <!-- main-->
-        <main class="container col-11 col-md-9" id="form-container">
-            <div class="row gx-5"> 
-                <div class="col-md-6">
-                    <h2 class="contato">Entre em contato</h2>
-                    <form action="envio.php" method="post" class="row g-3" oninput="validaForm()">
-                        <div class="row">
-                            <div class="col-6 col-sm-12 form-floating mb-3">
-                                <input minlength="10" type="text" class="form-control" id="nome" name="nome" placeholder="Digite o seu nome" oninput="validaNome()" required>
-                                <label for="nome" class="form-label">Nome<sup style="color: red;">*</sup></label>
-                            </div>
-                            <div class="col-6 col-sm-12 form-floating mb-3">
-                                <input type="tel" class="form-control" id="phone" name="phone" placeholder="Digite o seu telefone" oninput="validaTelefone()" required>
-                                <label for="tel" class="form-label">Telefone<sup style="color: red;">*</sup></label>
-                            </div>
-                        </div>
-                        <div class="form-floating mb-3">
-                            <input minlength="10" type="email" class="form-control" id="email" name="email" placeholder="Digite o seu email" oninput="validaEmail()" required>
-                            <label for="email" class="form-label">Email<sup style="color: red;">*</sup></label>
-                        </div>
-                        <div class="form-floating mb-3">
-                            <input minlength="4" type="text" class="form-control" name="assunto" id="assunto" placeholder="Digite o assunto" oninput="validaAssunto()" required>
-                            <label for="assunto" class="form-label">Assunto<sup style="color: red;">*</sup></label>
-                        </div>
-                        <div class="form-floating mb-3">
-                            <textarea minlength="10" class="form-control" rows="3" name="mensagem" id="mensagem" placeholder="Digite a mensagem" oninput="validaMensagem()" required></textarea>
-                            <label for="mensagem" class="form-label">Mensagem<sup style="color: red;">*</sup></label>
-                        </div>
-                        <div class="mb-3">
-                            <div class="form-check mb-2">
-                                <input type="checkbox" class="form-check-input" id="agree-form" name="newsletter" checked value="sim" oninput="validaNewsletter()">
-                                <label for="newsletter" class="form-check-label">Aceita receber as nossas newsletter ?</label>
-                            </div>
-                            <input type="submit" disabled class="btn btn-primary" name="btn" id="btn" value="Enviar">
-                        </div>
-                    </form>
-                </div>
-                <div class="col-md-6">
+        <main class="container col-11 col-md-9 msg" id="form-container">
+            <div class="row justify-content-center">
+                <div class="col-md-12 col-lg-6 order-2">
                     <div class="row align-items-center">
-                        <div class="col-12">
-                            <img src="../../assets/img/img-form.svg" alt="Imagem de formulario" class="img-fluid">
+                        <div>
+                            <img src="../../assets/img/msgsend.svg" alt="Form sending" class="img-fluid">
                         </div>
                     </div>
                 </div>
+                <div class="col-md-12 col-lg-6 order-1">
+                    <h1 class="msg">Formulário enviado com sucesso!</h1>
+                    <button type="button" name="btn" id="btn" class="btn btn-primary"><a style="color: #000; text-decoration: none;" href="index.html">Voltar</a></button>
+                </div>
             </div>
         </main>
-        <!-- Footer-->
         <footer>
             <div class="container-fluid">
                 <div class="col-12" id="social-container">
