--- a/index.html
+++ b/index.html
@@ -51,9 +51,6 @@
                   <a href="#" class="nav-link">Serviços</a>
               </li>
               <li class="nav-items">
-                <a href="html/loja/index.html" class="nav-link">Loja</a>
-            </li>
-              <li class="nav-items">
                   <a href="html/Clients/index.html" class="nav-link">Clientes</a>
               </li>
               <li class="nav-items">
@@ -136,8 +133,6 @@
                   <div class="card-body">
                        <p class="card-category secondary-color">Chave canivete</p>
                        <h5 class="card-title">Alarmes Positron</h5>
-                       <p class="card-text primary-color">R$119,99</p>
-                       <a href="#" class="btn btn-primary">Comprar</a>
                   </div>
               </div>
           </div>
@@ -147,8 +142,6 @@
                   <div class="card-body">
                        <p class="card-category secondary-color">Chave canivete</p>
                        <h5 class="card-title">Honda Fit/HRV</h5>
-                       <p class="card-text primary-color">R$345,65</p>
-                       <a href="#" class="btn btn-primary">Comprar</a>
                   </div>
               </div>
           </div>
@@ -158,8 +151,6 @@
                   <div class="card-body">
                        <p class="card-category secondary-color">Chave canivete</p>
                        <h5 class="card-title">Ford Fiesta</h5>
-                       <p class="card-text primary-color">R$174,65</p>
-                       <a href="#" class="btn btn-primary">Comprar</a>
                   </div>
               </div>
       </div>
@@ -169,8 +160,6 @@
               <div class="card-body">
                   <p class="card-category secondary-color">Chave canivete</p>
                   <h5 class="card-title">Positron GM</h5>
-                  <p class="card-text primary-color">R$135,65</p>
-                  <a href="#" class="btn btn-primary">Comprar</a>
               </div>
           </div>
       </div>
@@ -187,7 +176,7 @@
               <a href="#" class="btn btn-primary">Agendar Agora</a>
           </div>
           <div class="col-12 col-md-4">
-              <img src="https://ae01.alicdn.com/kf/H49eb389cc44c439984431c4b8848483dm/Liga-de-zinco-chave-do-carro-capa-para-vw-polo-golf-passat-para-skoda-octavia-a5.jpg" alt="Chave modelo">
+              <img src="https://static.wixstatic.com/media/db08a0_dd06ad0fd6654637b5df2877583603b9~mv2.png/v1/fill/w_429,h_307,al_c,lg_1,q_85,enc_auto/db08a0_dd06ad0fd6654637b5df2877583603b9~mv2.png" alt="Chave modelo">
           </div>
       </div>
     </div>
@@ -198,7 +187,7 @@
           <div class="col-12 col-md-3 d-none d-md-flex" id="new-products-banner">
               <p class="secondary-color">As melhores</p>
               <h3>Chaves</h3>
-              <p class="primary-color">pelos melhores preços</p>
+              <p class="primary-color">para o seu carro</p>
           </div>
           <div class="col-12 col-md-9">
               <div class="row">
@@ -208,8 +197,6 @@
                           <div class="card-body">
                                <p class="card-category secondary-color">Chave presença</p>
                                <h5 class="card-title">Jeep</h5>
-                               <p class="card-text primary-color">R$177,65</p>
-                               <a href="#" class="btn btn-primary">Comprar</a>
                           </div>
                       </div>
                   </div>
@@ -219,8 +206,6 @@
                           <div class="card-body">
                                <p class="card-category secondary-color">Chave presença</p>
                                <h5 class="card-title">BMW</h5>
-                               <p class="card-text primary-color">R$177,65</p>
-                               <a href="#" class="btn btn-primary">Comprar</a>
                           </div>
                       </div>
                   </div>
@@ -230,8 +215,6 @@
                           <div class="card-body">
                                <p class="card-category secondary-color">Chave canivete</p>
                                <h5 class="card-title">Hyundai HB20</h5>
-                               <p class="card-text primary-color">R$177,65</p>
-                               <a href="#" class="btn btn-primary">Comprar</a>
                           </div>
                       </div>
                   </div>
@@ -241,8 +224,6 @@
                           <div class="card-body">
                                <p class="card-category secondary-color">Chave canivete</p>
                                <h5 class="card-title">VW G5</h5>
-                               <p class="card-text primary-color">R$177,65</p>
-                               <a href="#" class="btn btn-primary">Comprar</a>
                           </div>
                       </div>
                   </div>
@@ -252,8 +233,6 @@
                           <div class="card-body">
                                <p class="card-category secondary-color">Chave simples</p>
                                <h5 class="card-title">Toyota Hilux</h5>
-                               <p class="card-text primary-color">R$177,65</p>
-                               <a href="#" class="btn btn-primary">Comprar</a>
                           </div>
                       </div>
                   </div>
@@ -263,8 +242,6 @@
                           <div class="card-body">
                                <p class="card-category secondary-color">Chave canivete</p>
                                <h5 class="card-title">Toyota Hilux</h5>
-                               <p class="card-text primary-color">R$177,65</p>
-                               <a href="#" class="btn btn-primary">Comprar</a>
                           </div>
                       </div>
                   </div>
@@ -303,25 +280,9 @@
                 <p class="secondary-color">Alguma dúvida ? Ligue para nós</p>
                 <div class="store-phone"><i class="bi bi-telephone"> (21) 99942-6736</i></div>
               </div>
-              <div class="col-12 col-md-4 footer-column">
-                  <h3>Páginas</h3>
-                  <ul class="list-unstyled">
-                      <li class="mb-2"><a href="#" class="secondary-color">Política de Privacidade</a></li>
-                      <li class="mb-2"><a href="#" class="secondary-color">Política de Entrega</a></li>
-                      <li class="mb-2"><a href="#" class="secondary-color">Rastrei o seu Produto</a></li>
-                  </ul>
-              </div>
-          </div>
-      </div>
-      <div class="container-fluid">
-          <div class="col-12" id="social-container">
-              <a href="https://www.facebook.com/CHAVEIROJBALVES/"><i class="bi bi-facebook"></i></a>
-              <a href="https://www.instagram.com/chaveirojoaobosco24h/" target="_blank"><i class="bi bi-instagram"></i></a>
-              <a href="https://wa.me/5521999426736?text=Gostaria%20de%20solicitar%20um%20orçamento"><i class="bi bi-whatsapp"></i></a>
           </div>
       </div>
       <div class="container" id="copy-container">
-          <p>Todos os direitos reservados <div class="container-fluid">
             <div class="col-12" id="social-container">
                 <a href="https://www.facebook.com/CHAVEIROJBALVES/"><i class="bi bi-facebook"></i></a>
                 <a href="https://www.instagram.com/chaveirojoaobosco24h/" target="_blank"><i class="bi bi-instagram"></i></a>
